Fix formatting on Safari for application form

--- a/client/src/pages/application/index.module.css
+++ b/client/src/pages/application/index.module.css
@@ -4,7 +4,6 @@
   justify-content: flex-start;
   align-items: center;
   width: 100vw;
-  height: 100vh;
 }
 
 .loadingScreen {
