--- a/client/src/pages/applicationForm/index.module.css
+++ b/client/src/pages/applicationForm/index.module.css
@@ -15,7 +15,7 @@
   display: flex;
   flex-direction: column;
   max-width: var(--contentWidth);
-  width: 100%;
+  width: 100vw;
   align-items: center;
   padding: 100px 0;
   animation: fadein 1s;
@@ -32,10 +32,13 @@
 
 .application > h2 {
   margin: 0;
+  text-align: center;
+  width: 100%;
 }
 
 .application > h1 {
   margin-top: 0;
+  text-align: center;
 }
 
 .formContainer {
